src/bong/stylus.css
.wrapper .menu_container {
  display: none;
}

.listing_wrp.__with_sidebar {
  max-width: unset;
}

.bc_chat_header,
#bMemberBalance,
.header_bar,
.hn_search,
.header_online_wrp,
.ls_catrow,
.footer_copy,
.listing_sub_header,
.listing_head,
.lst_tags,
.footer_seo,
.footer,
.__try_me,
.lst_nick::before,
.js-pin_model,
.lsti_box.lst_social,
.lst_bage.__live,
.lst_bage.__mobile,
.lst_bage.__hd_plus,
.lst_bage.__vibratoy,
.lst_bage.__hd {
  display: none !important;
}

/* model thumbnail */
.ls_thumb {
  border-radius: 5px;
  overflow: hidden;
}

/* model thumbnail footer */
.wrapper .mls_without_thumb .lst_info {
  bottom: 0;
}

/* "new" model badge, everything else is hidden */
.lst_bage.__new {
  left: 0 !important;
}

:root,
body,
body.theme_light,
.page_header {
  --color-neutral-200: oklch(0.92 0 0);
  --color-neutral-300: oklch(0.87 0 0);
  --color-neutral-400: oklch(0.72 0 0);
  --color-neutral-500: oklch(0.56 0 0);
  --color-neutral-600: oklch(0.44 0 0);
  --color-neutral-700: oklch(0.37 0 0);
  --color-neutral-800: oklch(0.27 0 0);
  --color-neutral-900: oklch(0.2 0 0);

  --color-violet-400: oklch(0.71 0.16 294);
  --color-violet-500: oklch(0.61 0.22 293);
  --color-violet-600: oklch(0.54 0.25 293);
  --color-violet-700: oklch(0.49 0.24 293);

  --color-emerald-500: oklch(0.7 0.15 162);
  --color-emerald-600: oklch(0.6 0.13 163);
  --color-emerald-700: oklch(0.51 0.1 166);

  --bc-thm-header-bg: black;
  --bc-thm-header-separator-color: var(--bc-thm-header-bg);
  --bc-thm-mlsTabs-item-accentStripe-borderColor: var(--bc-thm-header-bg);
  --bc-thm-headerSearch-input_dark-bg: rgba(255, 255, 255, 0.15);
  --bc-thm-controlPopover-button-bg: var(--color-neutral-600);
  --bc-thm-controlPopover-button-bg-hover: var(--color-neutral-500);
  --bc-thm-controlPopover-button-bg-active: var(--color-neutral-700);
}

.f_dub .bt30_green,
body.theme_light.f_dub .bt30_green {
  --bc-thm-legacyBtn_green-bg: var(--color-neutral-600);
  --bc-thm-legacyBtn_green-bg-hover: var(--color-neutral-500);
  --bc-thm-legacyBtn_green-bg-active: var(--color-neutral-700);
}

.f_rh .page_header,
body.theme_light.f_rh .page_header {
  --bc-thm-header-bg: black;
  --bc-thm-header_noise-bg-p0: var(--bc-thm-header-bg);
  --bc-thm-header_noise-bg-p100: var(--bc-thm-header-bg);
  --bc-thm-header-separator-color: var(--bc-thm-header-bg);
}

/* page header */
.page_header {
  position: sticky;
  top: 0;
  z-index: 1000;
  height: 30px;
}
.page_header .header_logo .logo_icon {
  width: 102px;
  top: 1px;
}
.header_token_badge,
body.theme_light .header_token_badge {
  --bc-thm-tokenBadge-color: var(--color-neutral-300);
}
.header_control,
body.theme_light .header_control {
  --bc-thm-header-user-color: var(--color-neutral-300);
}

/* counter badges in header */
.has_hint {
  & > span > span,
  & > div > button > div {
    background: var(--color-violet-400) !important;
    max-width: 14px;
    min-width: 14px;
    height: 14px;
  }
}

/* counter badges elsewhere */
.bc_bubble {
  background: var(--color-violet-400) !important;
  max-width: 14px;
  min-width: 14px;
  height: 14px;
}

/* floating chat window (dynamic class names) */
.react-draggable > div {
  --im-float-window-legacy-wrapper-bg-color: var(--color-neutral-800);
  --im-float-window-legacy-body-bg-color: white;

  & > div:nth-child(1) {
    /* header */
    & > span:nth-child(2) {
      /* title */
      & > span,
      & > button {
        /*  badge & ellipsis */
        display: none;
      }
    }

    & > div:nth-child(3) {
      /* window controls */
      & > button:nth-child(1) {
        display: none;
      }

      & > a:nth-child(2) {
        display: none;
      }
    }
  }

  & > div:nth-child(2) {
    /* content */
    padding: 0;

    & > div:nth-child(1) {
      /* toolbar */
      background: transparent;
      border: none;
      padding: 12px;
    }

    & > div:nth-child(2) {
      /* messages container */
      background: transparent;

      & > div:nth-child(1) {
        /* font size control */
        display: none;
      }

      & > div:nth-child(2) {
        background: transparent;

        & > div {
          background: transparent;
        }
      }
    }
  }
}

/* main tabs */
.listing_tabs_wrp,
body.theme_light .listing_tabs_wrp {
  --bc-thm-listingTabs-item_selected-link-line-borderColor: black;
  border-bottom: 0;
  --bc-thm-listingTabs-borderColor: var(--color-neutral-400);
  --bc-thm-listingTabs-link-color: var(--color-neutral-400);
  --bc-thm-listingTabs-item_selected-link-line-borderColor: var(
    --color-neutral-200
  );
  --bc-thm-listingTabs-link-color-hover: var(--color-neutral-200);
}
.listing_tabs .lt_link {
  font-weight: 600;
}
.listing_tabs .lt_link:after {
  border-radius: 0;
}
.listing_tabs_wrp {
  margin: 0;
}
.listing_tabs {
  & > li:nth-child(2),
  & > li:nth-child(4),
  & > li:nth-child(5),
  & > li:nth-child(6),
  & > li:nth-child(7),
  & > li:nth-child(8) {
    display: none;
  }
}
.lt_pin_wrp.__inner {
  display: none !important;
}
#setting_culture {
  display: none;
}

/* main content (list page) */
.wrapper {
  background: black;
}

